# chess

./: .gitignore  .gitmodules  CMakeLists.txt
chess/: CMakeLists.txt  chess.cpp  chess.h
include/: Callback.h  ChessBoard.h  ChessTypes.h  Chesstypes.h  Chesstypes.hpp  Clickable.h  Game.h  GameException.h  Gui.h  LocalGame.h  Logger.h  Player.h  Widget.h
src/: Button  Button.cpp  CMakeLists.txt  ChessBoard.cpp  Chesstypes.cpp  ConsoleLogger.cpp  GameException.cpp  LocalGame.cpp  Player.cpp  SimpleLogger.cpp  game.h  game_exception.h  main.cpp  misc.h  position.cpp  position.h
tests/: CMakeLists.txt
